syntax = "proto3";

package aether.api;

option go_package = "github.com/aether/sync/api/proto;proto";

import "api/proto/common.proto";
import "google/protobuf/timestamp.proto";

// Auth servisi
service AuthService {
  // Kullanıcı kaydı
  rpc Register(RegisterRequest) returns (RegisterResponse);
  
  // Kullanıcı girişi
  rpc Login(LoginRequest) returns (LoginResponse);
  
  // Kullanıcı çıkışı
  rpc Logout(LogoutRequest) returns (Status);
  
  // Token doğrulama
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  
  // Şifre değiştirme
  rpc ChangePassword(ChangePasswordRequest) returns (Status);
}

// Mesajlar

message User {
  string id = 1;
  string profile_name = 2;
  UserRole role = 3;
  bool is_active = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message RegisterRequest {
  string profile_name = 1;
  string password = 2;
  UserRole role = 3;
}

message RegisterResponse {
  Status status = 1;
  User user = 2;
}

message LoginRequest {
  string profile_name = 1;
  string password = 2;
}

message LoginResponse {
  Status status = 1;
  string token = 2;
  User user = 3;
  google.protobuf.Timestamp expires_at = 4;
}

message LogoutRequest {
  string token = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  Status status = 1;
  bool is_valid = 2;
  User user = 3;
}

message ChangePasswordRequest {
  string user_id = 1;
  string old_password = 2;
  string new_password = 3;
}





